--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Gaurav Singh"
   avatar           : "profile.jpg"
   bio              : "into ML, AI & Blockchain. Previously worked @wingify, @yahoo and @amazon. Doing PhD in ML @UCL. Follows Politics. Plays Table Tennis"
-  location         : "Location"
+  location         : "London"
   employer         :
   googlescholar    : ""
   email            :
