--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Gaurav Singh"
+title                    : "Gaurav's Personal Webpage"
 title_separator          : "-"
 name                     : &name "Gaurav Singh"
 description              : &description "personal description"
