fixed google scholar profile

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Interested in ML, AI & Blockchain. Previously worked @wingify, @yahoo and @amazon. Doing PhD in ML @UCL. Follows Politics. Plays Table Tennis"
   location         : "London"
   employer         :
-  googlescholar    : ""
+  googlescholar    : "https://scholar.google.com/citations?user=DvffL3EAAAAJ&hl=en"
   email            :
   uri              :
   bitbucket        :
