small fixes and updating CV

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Gaurav Singh"
   avatar           : "profile.jpg"
-  bio              : "Interested in ML, AI & Blockchain. Previously worked @wingify, @yahoo and @amazon. Doing PhD in ML @UCL. Follows Politics. Plays Table Tennis"
+  bio              : "PhD in NLP from UCL. Previously worked @vwo, @yahoo, @amazon and @mediatek. "
   location         : "London"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=DvffL3EAAAAJ&hl=en"
