--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Gaurav Singh"
   avatar           : "profile.jpg"
-  bio              : "PhD in NLP from UCL. Previously worked @vwo, @yahoo, @amazon and @mediatek. "
+  bio              : "PhD in ML / NLP from UCL. Previously worked @vwo, @yahoo, @amazon and @mediatek. "
   location         : "London"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=DvffL3EAAAAJ&hl=en"
